// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser if statements block if allows 'then' to be skipped 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 26,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": ">",
          },
        },
        "thenBranch": Block {
          "startingLocation": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "foo",
              },
              "tokens": Object {
                "equals": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": Int32 {
                  "kind": 3,
                  "value": 3,
                },
              },
            },
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "bar",
              },
              "tokens": Object {
                "equals": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [
        Object {
          "isReserved": false,
          "kind": 52,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "else if",
        },
      ],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": undefined,
    },
  },
]
`;

exports[`parser if statements block if parses if only 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": undefined,
    "elseIfs": Array [],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "bar",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [],
      "endIf": Object {
        "isReserved": false,
        "kind": 56,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end if",
      },
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": Object {
        "isReserved": true,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "THEN",
      },
    },
  },
]
`;

exports[`parser if statements block if parses if-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "bar",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "elseIfs": Array [],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": Object {
        "isReserved": true,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "then",
      },
    },
  },
]
`;

exports[`parser if statements block if parses if-elseif-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 26,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": ">",
          },
        },
        "thenBranch": Block {
          "startingLocation": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "foo",
              },
              "tokens": Object {
                "equals": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": Int32 {
                  "kind": 3,
                  "value": 3,
                },
              },
            },
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "bar",
              },
              "tokens": Object {
                "equals": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [
        Object {
          "isReserved": false,
          "kind": 52,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "else if",
        },
      ],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": Object {
        "isReserved": true,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "then",
      },
    },
  },
]
`;

exports[`parser if statements single-line if allows 'then' to be skipped 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 28,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "=",
          },
        },
        "thenBranch": Block {
          "startingLocation": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "same",
              },
              "tokens": Object {
                "equals": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": undefined,
    },
  },
]
`;

exports[`parser if statements single-line if parses if only 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": undefined,
    "elseIfs": Array [],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": Object {
        "isReserved": true,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "then",
      },
    },
  },
]
`;

exports[`parser if statements single-line if parses if-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": Object {
        "isReserved": true,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "Then",
      },
    },
  },
]
`;

exports[`parser if statements single-line if parses if-elseif-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 24,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 28,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "=",
          },
        },
        "thenBranch": Block {
          "startingLocation": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "same",
              },
              "tokens": Object {
                "equals": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 30,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "tokens": Object {
            "equals": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "=",
            },
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "tokens": Object {
      "elseIfs": Array [],
      "endIf": undefined,
      "if": Object {
        "isReserved": true,
        "kind": 71,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "if",
      },
      "then": Object {
        "isReserved": true,
        "kind": 30,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "then",
      },
    },
  },
]
`;

exports[`parser if statements supports trailing colons after conditional statements 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": 18,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 3,
          },
        },
        "statements": Array [
          If {
            "condition": Binary {
              "left": Literal {
                "_location": Object {
                  "end": Object {
                    "column": 20,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 19,
                    "line": 3,
                  },
                },
                "value": Int32 {
                  "kind": 3,
                  "value": 1,
                },
              },
              "right": Literal {
                "_location": Object {
                  "end": Object {
                    "column": 24,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 23,
                    "line": 3,
                  },
                },
                "value": Int32 {
                  "kind": 3,
                  "value": 0,
                },
              },
              "token": Object {
                "isReserved": false,
                "kind": 26,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 22,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 21,
                    "line": 3,
                  },
                },
                "text": ">",
              },
            },
            "elseBranch": Block {
              "startingLocation": Object {
                "end": Object {
                  "column": 25,
                  "line": 8,
                },
                "file": "",
                "start": Object {
                  "column": 20,
                  "line": 8,
                },
              },
              "statements": Array [
                Print {
                  "expressions": Array [
                    Literal {
                      "_location": Object {
                        "end": Object {
                          "column": 47,
                          "line": 8,
                        },
                        "file": "",
                        "start": Object {
                          "column": 26,
                          "line": 8,
                        },
                      },
                      "value": BrsString {
                        "kind": 2,
                        "value": "tHaT NuMbEr iS ZeRo",
                      },
                    },
                  ],
                  "tokens": Object {
                    "print": Object {
                      "isReserved": true,
                      "kind": 80,
                      "literal": undefined,
                      "location": Object {
                        "end": Object {
                          "column": 25,
                          "line": 8,
                        },
                        "file": "",
                        "start": Object {
                          "column": 20,
                          "line": 8,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
            "elseIfs": Array [
              Object {
                "condition": Binary {
                  "left": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": 25,
                        "line": 5,
                      },
                      "file": "",
                      "start": Object {
                        "column": 24,
                        "line": 5,
                      },
                    },
                    "value": Int32 {
                      "kind": 3,
                      "value": 1,
                    },
                  },
                  "right": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": 29,
                        "line": 5,
                      },
                      "file": "",
                      "start": Object {
                        "column": 28,
                        "line": 5,
                      },
                    },
                    "value": Int32 {
                      "kind": 3,
                      "value": 0,
                    },
                  },
                  "token": Object {
                    "isReserved": false,
                    "kind": 24,
                    "literal": undefined,
                    "location": Object {
                      "end": Object {
                        "column": 27,
                        "line": 5,
                      },
                      "file": "",
                      "start": Object {
                        "column": 26,
                        "line": 5,
                      },
                    },
                    "text": "<",
                  },
                },
                "thenBranch": Block {
                  "startingLocation": Object {
                    "end": Object {
                      "column": 25,
                      "line": 6,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 6,
                    },
                  },
                  "statements": Array [
                    Print {
                      "expressions": Array [
                        Literal {
                          "_location": Object {
                            "end": Object {
                              "column": 37,
                              "line": 6,
                            },
                            "file": "",
                            "start": Object {
                              "column": 26,
                              "line": 6,
                            },
                          },
                          "value": BrsString {
                            "kind": 2,
                            "value": "negative!",
                          },
                        },
                      ],
                      "tokens": Object {
                        "print": Object {
                          "isReserved": true,
                          "kind": 80,
                          "literal": undefined,
                          "location": Object {
                            "end": Object {
                              "column": 25,
                              "line": 6,
                            },
                            "file": "",
                            "start": Object {
                              "column": 20,
                              "line": 6,
                            },
                          },
                          "text": "print",
                        },
                      },
                    },
                  ],
                },
              },
            ],
            "thenBranch": Block {
              "startingLocation": Object {
                "end": Object {
                  "column": 25,
                  "line": 4,
                },
                "file": "",
                "start": Object {
                  "column": 20,
                  "line": 4,
                },
              },
              "statements": Array [
                Print {
                  "expressions": Array [
                    Literal {
                      "_location": Object {
                        "end": Object {
                          "column": 37,
                          "line": 4,
                        },
                        "file": "",
                        "start": Object {
                          "column": 26,
                          "line": 4,
                        },
                      },
                      "value": BrsString {
                        "kind": 2,
                        "value": "positive!",
                      },
                    },
                  ],
                  "tokens": Object {
                    "print": Object {
                      "isReserved": true,
                      "kind": 80,
                      "literal": undefined,
                      "location": Object {
                        "end": Object {
                          "column": 25,
                          "line": 4,
                        },
                        "file": "",
                        "start": Object {
                          "column": 20,
                          "line": 4,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
            "tokens": Object {
              "elseIfs": Array [
                Object {
                  "isReserved": false,
                  "kind": 52,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 23,
                      "line": 5,
                    },
                    "file": "",
                    "start": Object {
                      "column": 16,
                      "line": 5,
                    },
                  },
                  "text": "else if",
                },
              ],
              "endIf": undefined,
              "if": Object {
                "isReserved": true,
                "kind": 71,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 18,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 16,
                    "line": 3,
                  },
                },
                "text": "if",
              },
              "then": undefined,
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 19,
            "line": 10,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 10,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 84,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": Object {
          "column": 16,
          "line": 2,
        },
      },
      "text": "main",
    },
  },
]
`;
